--- a/style.css
+++ b/style.css
@@ -1,26 +1,80 @@
 body {
-    background-color: lightblue;
-
+  background-color: lightblue;
 }
 
 button {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 45px;
-    margin: 150px 0px;
-    text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+
+  font-size: 45px;
+
+  margin-top: 50%;
+
+  padding: 10px;
+
+  text-align: center;
+
+  border-style: dashed solid;
+
+  border-width: 1px;
 }
 
-#start-btn, #next-btn {
-    font-size: 30px;
-    font-weight: bold;
-    margin-top: 40px;
-    padding: 10px 20px;
+#start-btn,
+#next-btn {
+  background-color: #f4511e;
+
+  color: #ffffff;
+
+  text-align: center;
+
+  font-size: 28px;
+
+  padding: 20px;
+
+  width: 150px;
+
+  transition: all 0.5s;
+
+  cursor: pointer;
+
+  margin: 20px;
 }
 
 .hide {
-    display:none;
+  display: none;
+}
+
+.answer-btn {
+  background-color: #5d92e0;
+
+  color: #ffffff;
+
+  text-align: center;
+
+  font-size: 20px;
+
+  padding: 10px;
+
+  width: 200px;
+
+  height: 80px;
+
+  transition: all 0.5s;
+
+  cursor: pointer;
+
+  margin: 20px;
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+    margin-top: 10%;
+
+    padding: 10px;
+
+    text-align: center;
+  }
 }
