--- a/style.css
+++ b/style.css
@@ -2,24 +2,30 @@ body {
   background-color: lightblue;
 }
 
-button {
-  box-sizing: border-box;
+.timer {
+  font-size: 20px;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  color: indianred;
 }
 
-.container {
+#container {
   font-family: Arial, Helvetica, sans-serif;
 
-  font-size: 45px;
-
-  margin-top: 50%;
+  font-size: 20px;
 
   padding: 10px;
 
   text-align: center;
+}
 
-  border-style: dashed solid;
+#container-buttons {
+  display: block;
 
-  border-width: 1px;
+  margin: auto;
+
+  width: fit-content;
 }
 
 #start-btn,
@@ -47,10 +53,11 @@ button {
   display: none;
 }
 
-.answer-btn {
+/* .answer-btn {
+
   background-color: #5d92e0;
 
-  color: #ffffff;
+  color: #FFFFFF;
 
   text-align: center;
 
@@ -67,14 +74,5 @@ button {
   cursor: pointer;
 
   margin: 20px;
-}
 
-@media only screen and (min-width: 992px) {
-  .container {
-    margin-top: 10%;
-
-    padding: 10px;
-
-    text-align: center;
-  }
-}
+} */
