--- a/style.css
+++ b/style.css
@@ -4,48 +4,36 @@ body {
 
 .timer {
   font-size: 20px;
-
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-
   color: indianred;
 }
 
 #container {
   font-family: Arial, Helvetica, sans-serif;
-
   font-size: 20px;
-
   padding: 10px;
-
+  display: block;
+  margin: auto;
+  width: fit-content;
   text-align: center;
 }
 
 #container-buttons {
   display: block;
-
   margin: auto;
-
   width: fit-content;
 }
 
 #start-btn,
 #next-btn {
   background-color: #f4511e;
-
   color: #ffffff;
-
   text-align: center;
-
   font-size: 28px;
-
   padding: 20px;
-
   width: 150px;
-
   transition: all 0.5s;
-
   cursor: pointer;
-
   margin: 20px;
 }
 
