--- a/style.css
+++ b/style.css
@@ -18,14 +18,13 @@ body {
   text-align: center;
 }
 
-#container-buttons {
+.startBtn-container {
   display: block;
   margin: auto;
   width: fit-content;
 }
 
-#start-btn,
-#next-btn {
+#start-btn {
   background-color: #f4511e;
   color: #ffffff;
   text-align: center;
@@ -41,26 +40,7 @@ body {
   display: none;
 }
 
-/* .answer-btn {
-
-  background-color: #5d92e0;
-
-  color: #FFFFFF;
-
-  text-align: center;
-
-  font-size: 20px;
-
-  padding: 10px;
-
-  width: 200px;
-
-  height: 80px;
-
-  transition: all 0.5s;
-
-  cursor: pointer;
-
-  margin: 20px;
-
-} */
+#lastUser-Container{
+  margin:auto;
+  width: fit-content;
+}
