--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   color: indianred;
 }
 
-#container {
+.container {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   padding: 10px;
