--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
 }
 
 .timer {
-  font-size: 20px;
+  font-size: 30px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: indianred;
+  color: rgb(205, 92, 92);
 }
 
 .container {
@@ -19,6 +19,7 @@ body {
 }
 
 .startBtn-container {
+  
   display: block;
   margin: auto;
   width: fit-content;
@@ -36,11 +37,48 @@ body {
   margin: 20px;
 }
 
+#play-again {
+  background-color: #1e7bf4;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 20px;
+}
+
+#save {
+  background-color: #1e7bf4;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 20px;
+}
+
 .hide {
   display: none;
 }
 
 #lastUser-Container{
   margin:auto;
+  text-align: center;
   width: fit-content;
+}
+
+.error, .success {
+  margin: 10px;
+  font-size: 25px;
+  text-align: center;
+}
+
+.initials, #lastUserScore {
+  font-size: 20px;
+  width: fit-content;
+
 }
